Fixing dowload button alignment fr

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ button {
 }
 
 header {
+    display: flex;
     background-image: linear-gradient(to bottom, var(--deep-pool), #00000000);
     margin-bottom: 30px;
     color: white;
@@ -65,7 +66,7 @@ header.fixed {
 
 header nav {
     display: flex;
-    width: 60%;
+    width: 100%;
 }
 
 header nav a {
@@ -75,7 +76,7 @@ header nav a {
 }
 
 header .aligned_right {
-    width: 20px;
+    width: 100%;
 }
 
 .content {
